@startuml Sistema_GIGA_Diagrama_Clases_Backend
!define RECTANGLE class

title Sistema GIGA - Diagrama de Clases Backend (Database First)\nEstructura Principal de Datos - 4 Módulos Funcionales

' ==============================================================================
' ESTILOS Y CONFIGURACIÓN
' ==============================================================================
skinparam backgroundColor #FFFFFF
skinparam handwritten false
skinparam monochrome false
skinparam shadowing false

skinparam class {
    BackgroundColor #E3F2FD
    BorderColor #1976D2
    FontSize 10
    AttributeFontSize 9
}

skinparam packageStyle rectangle
skinparam package {
    BackgroundColor #F5F5F5
    BorderColor #757575
    FontSize 12
}

' ==============================================================================
' MÓDULO 1: PERSONAS (Estructura Organizacional)
' ==============================================================================
package "📋 MÓDULO PERSONAS" #E8F5E8 {
    
    class Area {
        + id_area : BigAutoField <<PK>>
        + nombre : CharField(100)
        + descripcion : TextField
        + id_area_padre : ForeignKey(Area) <<nullable>>
        + jefe_area : ForeignKey(Agente) <<nullable>>
        + nivel : IntegerField
        + activo : BooleanField
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + nombre_completo : Property
        + es_raiz : Property
        + total_agentes : Property
        + _obtener_ids_area_y_descendientes() : List
    }
    
    class Rol {
        + id_rol : BigAutoField <<PK>>
        + nombre : CharField(100) <<unique>>
        + descripcion : TextField
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
    }
    
    class Agente {
        + id_agente : BigAutoField <<PK>>
        + email : CharField(100) <<unique>>
        + dni : CharField(20) <<unique>>
        + cuil : CharField(20) <<unique>>
        + legajo : CharField(50) <<unique>>
        + nombre : CharField(100)
        + apellido : CharField(100)
        + password_hash : CharField(255)
        + telefono : CharField(15)
        + fecha_nacimiento : DateField
        + provincia : CharField(100)
        + ciudad : CharField(100)
        + calle : CharField(150)
        + numero : CharField(10)
        + horario_entrada : TimeField
        + horario_salida : TimeField
        + agrupacion : CharField(100)
        + activo : BooleanField
        + id_area : ForeignKey(Area)
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + username : Property
        + direccion : Property
        + fecha_ingreso : Property
        + check_password(raw_password) : Boolean
        + set_password(raw_password) : void
    }
    
    class AgenteRol {
        + id_agente_rol : BigAutoField <<PK>>
        + id_agente : ForeignKey(Agente)
        + id_rol : ForeignKey(Rol)
        + asignado_en : DateTimeField
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
    }
    
    note right of Agente
        **Database First Strategy**
        • managed = False
        • Estructura definida en BD
        • Django solo CRUD datos
        • No puede modificar esquema
    end note
}

' ==============================================================================
' MÓDULO 2: GUARDIAS (Cronogramas y Asignaciones)
' ==============================================================================
package "⏰ MÓDULO GUARDIAS" #FFF3E0 {
    
    class Cronograma {
        + id_cronograma : BigAutoField <<PK>>
        + fecha_aprobacion : DateField
        + tipo : CharField(50)
        + hora_inicio : TimeField
        + hora_fin : TimeField
        + **estado : CharField(50)**
        + fecha_creacion : DateField
        + id_jefe : ForeignKey(Agente)
        + id_director : ForeignKey(Agente)
        + id_area : ForeignKey(Area)
        + creado_por_rol : CharField(50)
        + creado_por_id : ForeignKey(Agente)
        + aprobado_por_id : ForeignKey(Agente)
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + requiere_aprobacion : Property
        + puede_aprobar_rol : Property
    }
    
    class Guardia {
        + id_guardia : BigAutoField <<PK>>
        + fecha : DateField
        + hora_inicio : TimeField
        + hora_fin : TimeField
        + observaciones : TextField
        + tipo : CharField(50)
        + activa : BooleanField
        + estado : CharField(50)
        + horas_planificadas : IntegerField
        + horas_efectivas : IntegerField
        + id_cronograma : ForeignKey(Cronograma)
        + id_agente : ForeignKey(Agente)
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + es_multiples_dias : Property
        + fecha_fin_real : Property
        + duracion_dias : Property
        + incluye_fecha(fecha) : Boolean
        + get_fechas_incluidas() : List
    }
    
    class Feriado {
        + id_feriado : BigAutoField <<PK>>
        + nombre : CharField(200)
        + descripcion : TextField
        + fecha_inicio : DateField
        + fecha_fin : DateField
        + es_nacional : BooleanField
        + es_provincial : BooleanField
        + es_local : BooleanField
        + activo : BooleanField
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + es_multiples_dias : Property
        + duracion_dias : Property
        + tipo_feriado : Property
        + incluye_fecha(fecha) : Boolean
    }
    
    note right of Cronograma
        **Campo Clave: estado**
        • 'borrador'
        • 'pendiente_aprobacion'
        • 'aprobado'
        • 'publicado'
        • 'rechazado'
        
        **Flujo de Aprobación:**
        Jefatura → Director → Publicación
        Administrador: Auto-aprobación
    end note
}

' ==============================================================================
' MÓDULO 3: ASISTENCIA (Marcaciones y Licencias)
' ==============================================================================
package "📅 MÓDULO ASISTENCIA" #F3E5F5 {
    
    class Asistencia {
        + id_asistencia : BigAutoField <<PK>>
        + fecha : DateField
        + hora_entrada : TimeField
        + hora_salida : TimeField
        + marcacion_entrada_automatica : BooleanField
        + marcacion_salida_automatica : BooleanField
        + **es_correccion : BooleanField**
        + corregido_por : ForeignKey(Agente) <<nullable>>
        + observaciones : TextField
        + id_agente : ForeignKey(Agente)
        + id_area : ForeignKey(Area)
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + estado : Property
    }
    
    class Licencia {
        + id_licencia : BigAutoField <<PK>>
        + **estado : CharField(50)**
        + fecha_desde : DateField
        + fecha_hasta : DateField
        + observaciones : TextField
        + justificacion : TextField
        + id_agente : ForeignKey(Agente)
        + id_tipo_licencia : ForeignKey(TipoLicencia)
        + aprobada_por : ForeignKey(Agente) <<nullable>>
        + fecha_aprobacion : DateField <<nullable>>
        + observaciones_aprobacion : TextField
        + rechazada_por : ForeignKey(Agente) <<nullable>>
        + fecha_rechazo : DateField <<nullable>>
        + motivo_rechazo : TextField
        + solicitada_por : ForeignKey(Agente) <<nullable>>
        + creado_en : DateTimeField
        + actualizado_en : DateTimeField
        --
        + dias_licencia : Property
    }
    
    class TipoLicencia {
        + id_tipo_licencia : BigAutoField <<PK>>
        + codigo : CharField(50) <<unique>>
        + descripcion : TextField
    }
    
    class IntentoMarcacionFraudulenta {
        + id_intento : BigAutoField <<PK>>
        + fecha : DateField
        + hora : TimeField
        + dni_ingresado : CharField(20)
        + tipo_intento : CharField(50)
        + ip_address : CharField(45)
        + id_agente_sesion : ForeignKey(Agente)
        + id_agente_dni : ForeignKey(Agente) <<nullable>>
        + creado_en : DateTimeField
    }
    
    note right of Asistencia
        **Campo Clave: es_correccion**
        • false: Marcación normal
        • true: Corrección manual
        
        **Estados Calculados:**
        • 'completa': entrada + salida
        • 'sin_salida': solo entrada
        • 'sin_entrada': sin marcaciones
    end note
    
    note right of Licencia
        **Campo Clave: estado**
        • 'pendiente'
        • 'aprobada'
        • 'rechazada'
        
        **Flujo de Aprobación:**
        Solicitud → Jefe/Director → Estado Final
    end note
}

' ==============================================================================
' MÓDULO 4: AUDITORÍA (Registro de Operaciones)
' ==============================================================================
package "🔍 MÓDULO AUDITORÍA" #FFEBEE {
    
    class Auditoria {
        + id_auditoria : BigAutoField <<PK>>
        + pk_afectada : BigIntegerField <<nullable>>
        + nombre_tabla : CharField(100) <<nullable>>
        + **accion : CharField(50)**
        + valor_previo : JSONField <<nullable>>
        + valor_nuevo : JSONField <<nullable>>
        + id_agente : ForeignKey(Agente) <<nullable>>
        + creado_en : DateTimeField
        --
        + id : Property
    }
    
    note right of Auditoria
        **Campo Clave: accion**
        • 'CREATE' - Inserción
        • 'UPDATE' - Modificación
        • 'DELETE' - Eliminación
        • 'LOGIN' - Inicio sesión
        • 'LOGOUT' - Cierre sesión
        
        **Sin Relaciones Fuertes:**
        Solo referencial via pk_afectada
        Todos los cambios se registran
    end note
}

' ==============================================================================
' RELACIONES PRINCIPALES ENTRE MÓDULOS
' ==============================================================================

' Relaciones Personas
Area ||--o{ Area : "jerarquía"
Area ||--o{ Agente : "pertenece"
Area ||--o| Agente : "jefe_area"
Agente ||--o{ AgenteRol : "tiene"
Rol ||--o{ AgenteRol : "asigna"

' Relaciones Guardias
Cronograma ||--o{ Guardia : "contiene"
Agente ||--o{ Guardia : "asignado"
Agente ||--o{ Cronograma : "jefe"
Agente ||--o{ Cronograma : "director"
Area ||--o{ Cronograma : "area"

' Relaciones Asistencia  
Agente ||--o{ Asistencia : "marca"
Agente ||--o{ Licencia : "solicita"
TipoLicencia ||--o{ Licencia : "tipo"
Area ||--o{ Asistencia : "area"
Agente ||--o{ IntentoMarcacionFraudulenta : "sesion"

' Relaciones Auditoría (referenciales)
Agente ||..o{ Auditoria : "registra"

' ==============================================================================
' CARDINALIDADES Y RESTRICCIONES CLAVE
' ==============================================================================

note as cardinalidades
    **CARDINALIDADES IMPORTANTES:**
    
    **Personas:**
    • 1 Area → N Agentes (pertenencia)
    • 1 Area → 1 Agente (jefe_area) [opcional]
    • N Agente → M Rol (via AgenteRol)
    
    **Guardias:**
    • 1 Cronograma → N Guardias
    • 1 Agente → N Guardias
    • 1 Area → N Cronogramas
    
    **Asistencia:**
    • 1 Agente → N Asistencias (unique por fecha)
    • 1 Agente → N Licencias
    • 1 TipoLicencia → N Licencias
    
    **Auditoría:**
    • Sin FK estrictas, solo referencial
    • Todos los módulos generan auditoría
end note

' ==============================================================================
' CONFIGURACIÓN DATABASE FIRST
' ==============================================================================

note as database_first
    **ESTRATEGIA DATABASE FIRST:**
    
    **Todos los modelos:**
    • managed = False en Meta
    • Estructura definida en PostgreSQL
    • Django NO puede alterar esquemas
    • Scripts SQL en bd/init-scripts/
    
    **Beneficios:**
    • Control total de BD por DBA
    • Optimizaciones específicas de PostgreSQL
    • Integridad referencial en BD
    • Django solo para CRUD y lógica
    
    **Ubicación Esquemas:**
    • /home/micaela/giga/bd/init-scripts/
    • Tablas: agente, area, rol, cronograma, 
      guardia, asistencia, licencia, auditoria
end note

@enduml